[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thoughtful"
version = "0.1.0"
description = "A package sorting utility that categorizes packages based on their dimensions and weight"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]
